<resources>
    <string name="app_name">Game of dice</string>
    <string name="Score">Score round</string>
    <string name="Bank">Bank</string>
    <string name="BankDeposit">deposit</string>
    <string name="PlayerPoints">Player Points</string>
    <string name="ComputerPoints">Computer Points</string>
    <string name="Button_Roll">Roll</string>
    <string name="Button_Bet">Bet</string>
</resources>