<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dice21"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingTop="10dp"
        android:shadowColor="@android:color/background_light"
        android:text="@string/Bank"
        android:textColor="@color/colorAccent"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score_round"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/Score"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank" />

    <LinearLayout
        android:id="@+id/playerField"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:onClick="onClickPlayerField"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_round"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/cube_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="place_for_cube1" />

        <ImageView
            android:id="@+id/cube_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="place_for_cube2" />

        <ImageView
            android:id="@+id/cube_3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="place_for_cube3" />

        <ImageView
            android:id="@+id/cube_black1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:contentDescription="place_for_cube1" />

        <ImageView
            android:id="@+id/cube_black2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:contentDescription="place_for_cube2" />

        <ImageView
            android:id="@+id/cube_black3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:contentDescription="place_for_cube3" />

    </LinearLayout>

    <TextView
        android:id="@+id/playerPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/PlayerPoints"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank" />

    <TextView
        android:id="@+id/compPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/ComputerPoints"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank" />

</androidx.constraintlayout.widget.ConstraintLayout>